gitops/networking/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argocd
  namespace: argocd

  annotations:
    argocd.argoproj.io/tracking-id: networking:networking.k8s.io/Ingress:argocd/argocd

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - argocd.homelab.local
      secretName: argocd-tls

  rules:
    - host: argocd.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
