gitops/networking/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: prometheus
  namespace: monitoring

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - prometheus.homelab.local
      secretName: prometheus-tls

  rules:
    - host: prometheus.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
